<resources>
    <string name="app_name">MyLyrics</string>
    <string name="welcome_button_text">Start</string>

    <string name="selected_item">Selected item:</string>
    <string name="NewPerformer">Performer</string>
    <string name="NewTitleHint">Title</string>
    <string name="YoutubeLinkHint">Youtube link</string>
    <string name="NewLyricsTextHint">Lyrics</string>
    <string name="CreateButtonText">Save lyrics</string>
    <string name="AllLyricsText">All</string>
    <string name="FavoriteLyricsText">Your Favorites</string>
    <string name="update_lyrics">Edit</string>
    <string name="delete_lyrics">Delete lyrics</string>
    <string name="create_lyrics">Create lyrics</string>
    <string name="save_lyrics">Save</string>
    <string name="cancel_update">Cancel</string>
    <string name="mylyrics_notification_channel_id">mylyrics_channel</string>
    <string name="mylyrics_notification_channel_name">mylyrics</string>
    <string name="notification_title">MyLyrics</string>
    <string name="mylyrics_notification_channel_description">MyLyrics</string>
    <string name="searchoption">Search</string>
    <string name="MenuLabel">Home</string>
    <string name="LyricsLabel">Lyrics</string>
    <string name="CreateLabel">New lyrics</string>
    <string name="UpdateLabel">Edit</string>
    <string name="JazzLyricsText">Jazz</string>
    <string name="HipHopLyricsText">Hip Hop</string>
    <string name="RockLyricsText">Rock</string>
    <string name="MetalLyricsText">Metal</string>
    <string name="PunkLyricsText">Punk</string>
    <string name="PopLyricsText">Pop</string>
    <string name="CountryLyricsText">Country</string>
    <string name="OperaLyricsText">Opera</string>
    <string name="firstpicture">FirstPicture</string>
    <string name="secondpicture">secondpicture</string>
    <string name="thirdpicture">thirdpicture</string>
    <string name="fourthpicture">fourthpicture</string>
    <string name="fifthpicture">fifthpicture</string>
    <string name="profile_picture">Profile Picture</string>
    <string name= "googleAccountWebCliendID">820173271126-5euu594fvgojr9iuefu3qtstbb16tjqu.apps.googleusercontent.com</string>
    <string name="recycler_option_edit">Edit</string>
    <string name="recycleritem_delete">Delete</string>
    <string name="spotify_link">Spotify Link</string>
    <string name="recyclerItem_Delete_Option">Delete</string>
    <string name="play_spotify">Play on spotify</string>
    <string name="pause_spotify">Pause</string>
    <string name="play_youtube">Play on youtube</string>
    <string name="play_youtubemusic">Play on youtube music</string>
    <string name="youtubeMusic_link">Youtube Music Link</string>
    <string name="FavoriteString">Favorite</string>
    <string name="logout">Logout</string>
    <string name="your_lyrics_count">Your lyrics count:</string>
    <string name="account_info">Account info</string>
    <string name="next">next</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="mylyrics">MyLyrics</string>
    <string name="slide_one_top_text">Login with Google or Spotify</string>
    <string name="slide_one_down_text">This is the login page, where you can login with either your google or spotify account.</string>
    <string name="slide_two_top_text">Home page</string>
    <string name="slide_two_down_text">This is the home page, where you can scroll vertically and horizontally between your lyrics.</string>
    <string name="slide_three_top_text">Home page</string>
    <string name="slide_three_down_text">This is the home page, where you can scroll vertically and horizontally for you lyrics</string>
    <string name="slide_four_top_text">Tap on Lyrics</string>
    <string name="slide_four_down_text">You can tap on every element on the home page, and it will bring up the lyrics you tapped on, with google or spotify options</string>
    <string name="slide_five_top_text">Youtube options</string>
    <string name="slide_five_down_text">If you are logged in with google, you can play your song on youtube or youtube music. There is an options menu where you can edit or delete your lyrics</string>
    <string name="slide_six_top_text">Spotify options</string>
    <string name="slide_six_down_text">If you are logged in with spotify, you can play or even pause the your song inside the app. There is an options menu where you can edit or delete your lyrics. (Only for premium users)</string>
    <string name="slide_seven_top_text">Edit your lyrics</string>
    <string name="slide_seven_down_text">You can edit your lyrics, and even you can put it into your favorite lyrics list</string>
    <string name="slide_eight_top_text">Search between your lyrics</string>
    <string name="slide_eight_down_text">You can search between your lyrics performer and title at the top , and see the result below it</string>
    <string name="slide_nine_top_text">Create your own lyrics</string>
    <string name="slide_nine_down_text">If you click on the plus button on the home page, you can create your own lyrics. You can set : title, performer, links, type, and the lyrics</string>
    <string name="slide_ten_top_text">See your Account info and Logout</string>
    <string name="slide_ten_down_text">If you click on your profile picture at the top right corner, you can see your Account info page and there you can log out.</string>
    <string name="recyclerItemLyricsModelTextViewOptionsTextValue">⋮</string>
    <string-array name="songTypes">
        <item>JAZZ</item>
        <item>HIPHOP</item>
        <item>ROCK</item>
        <item>METAL</item>
        <item>PUNK</item>
        <item>POP</item>
        <item>COUNTRY</item>
        <item>OPERA</item>
    </string-array>
</resources>
