<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/PlaySpotify"
        android:title="@string/play_spotify"
        android:icon="@drawable/baseline_play_arrow_white_48"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/Pause"
        android:title="@string/pause_spotify"
        android:icon="@drawable/outline_pause_white_48"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/UpdateLyrics"
        android:title="@string/update_lyrics"
        android:icon="@drawable/baseline_create_white_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/DeleteLyrics"
        android:title="@string/recycleritem_delete"
        android:icon="@drawable/baseline_delete_white_24"
        android:iconTint="@color/red"
        app:showAsAction="never" />
</menu>