<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="createLyricsModel"
            type="com.oe.nik.krujzgergely.ui.createlyricsitem.CreateLyricsActivityViewModel" />
    </data>

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="RtlHardcoded">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1"
            android:rowCount="6"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/newperformer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginTop="60dp"
                android:text="@={createLyricsModel.displayedPerformer}"
                android:textSize="@dimen/CreateLyricsTextSize"
                android:hint="@string/NewPerformer"
                />

            <EditText
                android:id="@+id/newtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@={createLyricsModel.displayedTitle}"
                android:textSize="@dimen/CreateLyricsTextSize"
                android:hint="@string/NewTitleHint" />

            <EditText
                android:id="@+id/newyoutubelink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={createLyricsModel.displayedyoutubelink}"
                android:layout_row="2"
                android:layout_column="0"
                android:textSize="@dimen/CreateLyricsTextSize"
                android:hint="@string/YoutubeLinkHint" />

            <Spinner
                android:id="@+id/newtype"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:layout_row="3"
                android:layout_column="0"
                android:entries="@array/SongTypes"
                android:onItemSelected="@{(parent,view,pos,id)->createLyricsModel.onSelectItem(parent,view,pos,id)}"/>

            <EditText
                android:id="@+id/newlyrics_text"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_row="4"
                android:layout_column="0"
                android:text="@={createLyricsModel.displayedLyrics_Text}"
                android:textSize="@dimen/CreateLyricsTextSize"
                android:hint="@string/NewLyricsTextHint"
                android:autofillHints="Add new lyrics"
                android:gravity="top"/>

            <Button
                android:id="@+id/btn_create"
                android:layout_width="200dp"
                android:layout_height="53dp"
                android:background="@drawable/button"
                android:text="@string/CreateButtonText"
                android:textColor="@color/white"
                android:layout_row="5"
                android:layout_gravity="center"
                android:onClick="@{() -> createLyricsModel.saveNewLyricsIntoLocalDb()}" />

        </GridLayout>
    </ScrollView>
</layout>