<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:id="@+id/lyricsScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lyricsesActivityTextViewMargin"
            android:text="@string/AllLyricsText"
            android:textStyle="bold"
            android:textSize="@dimen/activityLyricsesTextViewSize"
            android:textColor="@color/white"/>

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/all_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_ms_per_inch="100"
            app:msrv_snap_count="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lyricsesActivityTextViewMargin"
            android:text="@string/FavoriteLyricsText"
            android:textStyle="bold"
            android:textSize="@dimen/activityLyricsesTextViewSize"
            android:textColor="@color/white"/>

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/favourite_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_ms_per_inch="100"
            app:msrv_snap_count="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lyricsesActivityTextViewMargin"
            android:text="@string/JazzLyricsText"
            android:textStyle="bold"
            android:textSize="@dimen/activityLyricsesTextViewSize"
            android:textColor="@color/white"/>

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/jazz_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_ms_per_inch="100"
            app:msrv_snap_count="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lyricsesActivityTextViewMargin"
            android:text="@string/HipHopLyricsText"
            android:textStyle="bold"
            android:textSize="@dimen/activityLyricsesTextViewSize"
            android:textColor="@color/white"/>

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/hiphop_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_ms_per_inch="100"
            app:msrv_snap_count="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lyricsesActivityTextViewMargin"
            android:text="@string/RockLyricsText"
            android:textStyle="bold"
            android:textSize="@dimen/activityLyricsesTextViewSize"
            android:textColor="@color/white"/>

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/rock_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_ms_per_inch="100"
            app:msrv_snap_count="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lyricsesActivityTextViewMargin"
            android:text="@string/MetalLyricsText"
            android:textStyle="bold"
            android:textSize="@dimen/activityLyricsesTextViewSize"
            android:textColor="@color/white"/>

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/metal_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_ms_per_inch="100"
            app:msrv_snap_count="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lyricsesActivityTextViewMargin"
            android:text="@string/PunkLyricsText"
            android:textStyle="bold"
            android:textSize="@dimen/activityLyricsesTextViewSize"
            android:textColor="@color/white"/>

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/punk_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_ms_per_inch="100"
            app:msrv_snap_count="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lyricsesActivityTextViewMargin"
            android:text="@string/PopLyricsText"
            android:textStyle="bold"
            android:textSize="@dimen/activityLyricsesTextViewSize"
            android:textColor="@color/white"/>

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/pop_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_ms_per_inch="100"
            app:msrv_snap_count="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lyricsesActivityTextViewMargin"
            android:text="@string/CountryLyricsText"
            android:textStyle="bold"
            android:textSize="@dimen/activityLyricsesTextViewSize"
            android:textColor="@color/white"/>

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/country_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_ms_per_inch="100"
            app:msrv_snap_count="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lyricsesActivityTextViewMargin"
            android:text="@string/OperaLyricsText"
            android:textStyle="bold"
            android:textSize="@dimen/activityLyricsesTextViewSize"
            android:textColor="@color/white"/>

        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/opera_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:msrv_gravity="start"
            app:msrv_ms_per_inch="100"
            app:msrv_snap_count="2" />

    </LinearLayout>
</ScrollView>